--- a/spacyTrainigWithCustomData.ipynb
+++ b/spacyTrainigWithCustomData.ipynb
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -326,6 +326,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('\\nFrom:\\tKhoury <Nahas@service-now.com>\\nSent:\\tMonday, November 13, 2023 5:01 PM\\nTo:\\tDaher\\nSubject:\\tIncident INC0235963 was closed\\n\\n\\n \\nYour incident was closed\\nHi Gerges,\\nINC0235963 has been marked complete and was closed.\\nYou can view your incident to see past activity and updates.\\nView incident\\nAbout this request\\nShort description: Need to replace the Device \\nClosed by: Nazari \\nClosing notes: Hello Maalouf,  \\n \\nThe reason why only the UAE stockroom is available is because Gerges is \\nregistered under the UAE HR Company Code. It is a system error that occurs \\nwhen the contractors functional manager is in a different country. Like in \\nNaifeh case his functional manager Guirguis is from UAE. \\nUnfortunately the company codes for contractors are automatically changed \\nto match the company codes of the hiring manager.  \\n \\nTo replace Baba broken device you need to contact \\nSabbagh@Kyndryl.com and ask him for a direct device deployment. \\nPlease explain to Attia that Tahan is a contractor from Pakistan but he has \\nan UAE company code and therefore it is not possible to submit a normal \\nReplace Broken Device Request from Pakistan Stock.  \\n \\nIn case of other questions please reach out to me via Teams chat.  \\n \\nKind regards. \\nThank you, \\nHaddad\\n \\nHelp us improve! Please take a minute and rate your experience by taking this brief, \\nanonymous Survey.\\n\\n\\n \\nBrought to you by CIO. For Kyndryl internal use only.\\nCopyright @ 2023 Kyndryl Inc. All rights reserved\\n\\n\\nUnsubscribe | Notification Preferences\\n\\n \\nRef:MSG1540905_Vsx8LRB22klEwCxd0aV9\\nAswad',\n",
+       " {'entities': [(7, 13, 'NAME'),\n",
+       "   (15, 20, 'NAME'),\n",
+       "   (82, 87, 'NAME'),\n",
+       "   (160, 166, 'NAME'),\n",
+       "   (372, 378, 'NAME'),\n",
+       "   (401, 408, 'NAME'),\n",
+       "   (476, 482, 'NAME'),\n",
+       "   (639, 645, 'NAME'),\n",
+       "   (674, 682, 'NAME'),\n",
+       "   (837, 841, 'NAME'),\n",
+       "   (877, 884, 'NAME'),\n",
+       "   (960, 965, 'NAME'),\n",
+       "   (971, 976, 'NAME'),\n",
+       "   (1244, 1250, 'NAME'),\n",
+       "   (1545, 1550, 'NAME')]})"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "emailsTrain[0]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -334,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,27 +405,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "⚠ To generate a more effective transformer-based config (GPU-only), install the\n",
-      "spacy-transformers package and re-run this command. The config generated now\n",
-      "does not use transformers.\n",
-      "ℹ Generated config template specific for your use case\n",
-      "- Language: en\n",
-      "- Pipeline: ner\n",
-      "- Optimize for: accuracy\n",
-      "- Hardware: CPU\n",
-      "- Transformer: None\n",
-      "✔ Auto-filled config with all values\n",
-      "✔ Saved config\n",
-      "config.cfg\n",
-      "You can now add your data and train your pipeline:\n",
-      "python -m spacy train config.cfg --paths.train ./train.spacy --paths.dev ./dev.spacy\n"
+      "\n",
+      "✘ The provided output file already exists. To force overwriting the config file,\n",
+      "set the --force or -F flag.\n",
+      "\n"
      ]
     }
    ],
@@ -400,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -410,107 +435,31 @@
       "ℹ Saving to output directory: .\n",
       "ℹ Using CPU\n",
       "\u001b[1m\n",
-      "=========================== Initializing pipeline ===========================\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\AdilFaizan\\anaconda3\\lib\\runpy.py\", line 197, in _run_module_as_main\n",
-      "    return _run_code(code, main_globals, None,\n",
-      "  File \"c:\\Users\\AdilFaizan\\anaconda3\\lib\\runpy.py\", line 87, in _run_code\n",
-      "    exec(code, run_globals)\n",
-      "  File \"c:\\Users\\AdilFaizan\\anaconda3\\lib\\site-packages\\spacy\\__main__.py\", line 4, in <module>\n",
-      "    setup_cli()\n",
-      "  File \"c:\\Users\\AdilFaizan\\anaconda3\\lib\\site-packages\\spacy\\cli\\_util.py\", line 92, in setup_cli\n",
-      "    command(prog_name=COMMAND)\n",
-      "  File \"c:\\Users\\AdilFaizan\\anaconda3\\lib\\site-packages\\click\\core.py\", line 1157, in __call__\n",
-      "    return self.main(*args, **kwargs)\n",
-      "  File \"c:\\Users\\AdilFaizan\\anaconda3\\lib\\site-packages\\typer\\core.py\", line 778, in main\n",
-      "    return _main(\n",
-      "  File \"c:\\Users\\AdilFaizan\\anaconda3\\lib\\site-packages\\typer\\core.py\", line 216, in _main\n",
-      "    rv = self.invoke(ctx)\n",
-      "  File \"c:\\Users\\AdilFaizan\\anaconda3\\lib\\site-packages\\click\\core.py\", line 1688, in invoke\n",
-      "    return _process_result(sub_ctx.command.invoke(sub_ctx))\n",
-      "  File \"c:\\Users\\AdilFaizan\\anaconda3\\lib\\site-packages\\click\\core.py\", line 1434, in invoke\n",
-      "    return ctx.invoke(self.callback, **ctx.params)\n",
-      "  File \"c:\\Users\\AdilFaizan\\anaconda3\\lib\\site-packages\\click\\core.py\", line 783, in invoke\n",
-      "    return __callback(*args, **kwargs)\n",
-      "  File \"c:\\Users\\AdilFaizan\\anaconda3\\lib\\site-packages\\typer\\main.py\", line 683, in wrapper\n",
-      "    return callback(**use_params)  # type: ignore\n",
-      "  File \"c:\\Users\\AdilFaizan\\anaconda3\\lib\\site-packages\\spacy\\cli\\train.py\", line 54, in train_cli\n",
-      "    train(config_path, output_path, use_gpu=use_gpu, overrides=overrides)\n",
-      "  File \"c:\\Users\\AdilFaizan\\anaconda3\\lib\\site-packages\\spacy\\cli\\train.py\", line 81, in train\n",
-      "    nlp = init_nlp(config, use_gpu=use_gpu)\n",
-      "  File \"c:\\Users\\AdilFaizan\\anaconda3\\lib\\site-packages\\spacy\\training\\initialize.py\", line 95, in init_nlp\n",
-      "    nlp.initialize(lambda: train_corpus(nlp), sgd=optimizer)\n",
-      "  File \"c:\\Users\\AdilFaizan\\anaconda3\\lib\\site-packages\\spacy\\language.py\", line 1342, in initialize\n",
-      "    proc.initialize(get_examples, nlp=self, **p_settings)\n",
-      "  File \"c:\\Users\\AdilFaizan\\anaconda3\\lib\\site-packages\\spacy\\pipeline\\tok2vec.py\", line 213, in initialize\n",
-      "    validate_get_examples(get_examples, \"Tok2Vec.initialize\")\n",
-      "  File \"spacy\\training\\example.pyx\", line 74, in spacy.training.example.validate_get_examples\n",
-      "  File \"spacy\\training\\example.pyx\", line 53, in spacy.training.example.validate_examples\n",
-      "  File \"c:\\Users\\AdilFaizan\\anaconda3\\lib\\site-packages\\spacy\\training\\corpus.py\", line 164, in __call__\n",
-      "    for real_eg in examples:\n",
-      "  File \"c:\\Users\\AdilFaizan\\anaconda3\\lib\\site-packages\\spacy\\training\\corpus.py\", line 186, in make_examples\n",
-      "    for reference in reference_docs:\n",
-      "  File \"c:\\Users\\AdilFaizan\\anaconda3\\lib\\site-packages\\spacy\\training\\corpus.py\", line 219, in read_docbin\n",
-      "    doc_bin = DocBin().from_disk(loc)\n",
-      "  File \"c:\\Users\\AdilFaizan\\anaconda3\\lib\\site-packages\\spacy\\tokens\\_serialize.py\", line 275, in from_disk\n",
-      "    with path.open(\"rb\") as file_:\n",
-      "  File \"c:\\Users\\AdilFaizan\\anaconda3\\lib\\pathlib.py\", line 1252, in open\n",
-      "    return io.open(self, mode, buffering, encoding, errors, newline,\n",
-      "  File \"c:\\Users\\AdilFaizan\\anaconda3\\lib\\pathlib.py\", line 1120, in _opener\n",
-      "    return self._accessor.open(self, flags, mode)\n",
-      "FileNotFoundError: [Errno 2] No such file or directory: 'trainSpacyEmail.spacy'\n"
+      "=========================== Initializing pipeline ===========================\u001b[0m\n",
+      "✔ Initialized pipeline\n",
+      "\u001b[1m\n",
+      "============================= Training pipeline =============================\u001b[0m\n",
+      "ℹ Pipeline: ['tok2vec', 'ner']\n",
+      "ℹ Initial learn rate: 0.001\n",
+      "E    #       LOSS TOK2VEC  LOSS NER  ENTS_F  ENTS_P  ENTS_R  SCORE \n",
+      "---  ------  ------------  --------  ------  ------  ------  ------\n",
+      "  0       0          0.00     48.50    0.00    0.00    0.00    0.00\n",
+      "  0     200          0.80    880.04  100.00  100.00  100.00    1.00\n",
+      "  0     400          0.00      0.00  100.00  100.00  100.00    1.00\n",
+      "  0     600          0.00      0.00  100.00  100.00  100.00    1.00\n",
+      "  0     800          0.00      0.00  100.00  100.00  100.00    1.00\n",
+      "  0    1000          0.00      0.00  100.00  100.00  100.00    1.00\n",
+      "  0    1200          0.00      0.00  100.00  100.00  100.00    1.00\n",
+      "  0    1400          0.00      0.00  100.00  100.00  100.00    1.00\n",
+      "  0    1600          0.00      0.00  100.00  100.00  100.00    1.00\n",
+      "  0    1800          0.00      0.00  100.00  100.00  100.00    1.00\n",
+      "✔ Saved pipeline to output directory\n",
+      "model-last\n"
      ]
     }
    ],
    "source": [
     "! python -m spacy train config.cfg --output ./ --paths.train ./train.spacy --paths.dev ./test.spacy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nlp=spacy.load('model-last')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "doc=nlp('''\n",
-    "From: M, Vikas <VikasM@tevera.com>\n",
-    "Sent: Friday, September 22, 2023 8:46 AM\n",
-    "To: M Mahendra <M.Mahendra1@kandi.com>; R Bellala <R.Bellala@kandi.com>; IT Claims Data Model Team <IBUClaimsModel@tevera.com>; Load Test Claims <LoadTest@tevera.com>\n",
-    "Cc: DG-ADAI-Oracle-tevera-DBA<DG-ADAI-Oracle-tevera-DBA@kandi.com>; Vikram Mohit<Vikram.Mohit@kandi.com>\n",
-    "Subject: [EXTERNAL] RE: Old GRP's on Load Env\n",
-    "I told Suma to go ahead and drop the two GRPS (Green) as the LT database space has reached a critical level. Vikas Mehrunkar Manager, Engineering - Data Model | IBU Claims 5260 Western Avenue NW, Chevy Chase, MD 20815 Phone: (300)986-2427\n",
-    "ZjQcmQRYFpfptBannerStart\n",
-    "This Message Is From an External Sender \n",
-    "This message came from outside your organization. \n",
-    "  Vikas M \n",
-    "Manager, Engineering - Data Model | IBU Claims \n",
-    "5260 Western Avenue NW, Chevy Chase, MD 20815 \n",
-    "Phone: (002)986-247ext.24| Mobile: (700)477-8427\n",
-    "''')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "spacy.displacy.render(doc,style='ent',jupyter=True)"
    ]
   }
  ],
